Allow edgelambda to assume role

--- a/template.yaml
+++ b/template.yaml
@@ -112,6 +112,7 @@ Resources:
             Principal:
               Service: 
                 - lambda.amazonaws.com
+                - edgelambda.amazonaws.com
 
   EdgeBlockingDBPolicy:
     Type: AWS::IAM::Policy
